AC_INIT([miRA], [0.1], [michael@mhuttner.com],
        [miRA], [http://mhuttner.com/])
AC_PREREQ([2.68])

AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])

AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([1.11 subdir-objects -Wall -Werror])
AC_CONFIG_FILES([Makefile])

AC_PROG_CC
AM_PROG_CC_C_O



AC_OUTPUT
